Add FootMarker data class Add FootMarkerDao for database access Create FootMarkerDatabase Implement LocationRepository for managing location data Create LocationServicePreferencesHelper for managing service status

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/mapsFragment"
-        android:name="com.halilyavru.ayakizi.ui.maps.MapsFragment"
+        android:name="com.halilyavru.ayakizi.ui.maps.FootMarkerFragment"
         android:label="fragment_maps"
-        tools:layout="@layout/fragment_maps" />
+        tools:layout="@layout/fragment_foot_marker" />
 </navigation>
