--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#f1632a</color>
-    <color name="purple_500">#464646</color>
-    <color name="purple_700">#464646</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="orange">#f1632a</color>
+    <color name="gray">#464646</color>
+    <color name="green">#6cbc35</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
